TEST: attempt to fix home layout shift on scroll

--- a/src/global.css
+++ b/src/global.css
@@ -72,6 +72,16 @@
         background-color: white;
     }
 
+    .dv-screen {
+        width: 100vw;
+        width: 100svw;
+    }
+
+    .dh-screen {
+        height: 100vh;
+        height: 100svh;
+    }
+
     /* --- scrollbar style --- */
 
     ::-webkit-scrollbar {
